Apply Java17 OpenRewrite migration.